BUG-DFC-13095 Exam results helpline | Show message link overlaps information icon on smaller screens
Further updated on SHC banner styling

--- a/src/gds_service_toolkit/assets/src/frontend/sass/patterns/banner-bar.scss
+++ b/src/gds_service_toolkit/assets/src/frontend/sass/patterns/banner-bar.scss
@@ -96,8 +96,5 @@
   background-color: #ffdd00;
   box-shadow: 0 -2px #ffdd00, 0 4px #0b0c0c;
   text-decoration: none;
-
-  &:focus {
-    float:left;
-  }
+  float:left;
 }
